--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    </style>
   </body>
 </html>
